# img_srch

./: .gitignore  README.md  add.md  backend.py  hello.py  index_images.py  init_db.py  pyproject.toml  requirements.txt  test_paddle.py
benchmarks/: 1k_dataset_benchmark_results.json  README.md  concurrent_benchmark.py  custom_dataset_benchmark.py  indexing_benchmark.py  memory_benchmark.py  requirements.txt  run_all_benchmarks.py  search_benchmark.py
data/: Flag_of_India.png:Zone.Identifier  George-Washington-Bridge-New-Jersey-York-City.webp:Zone.Identifier  images (3).jpeg:Zone.Identifier  images (4).jpeg:Zone.Identifier  images (5).jpeg:Zone.Identifier  images (6).jpeg:Zone.Identifier  images (7).jpeg:Zone.Identifier  images.jpeg:Zone.Identifier  nature-lake-scenery-aerial-view-spray-lakes-reservoir-canada-uhdpaper.com-4K-8.2854.jpg:Zone.Identifier
embeddings/: image_embeddings.db
frontend_img_srch/: package-lock.json  package.json
img_launcher/: .gitignore  main.js  package-lock.json  package.json  preload.js
img_launcher/renderer/: index.html  index.js  styles.css
img_search_desktop/: README.md  pubspec.yaml
img_search_desktop/lib/: main.dart
server/: main.py  pyproject.toml  state.py
server/embeddings/: image_embeddings.db
server/models/: schemas.py
server/routes/: database.py  folders.py  open_file.py  search.py  websocket.py
server/services/: database.py  embeddings.py  file_operations.py  watcher.py
src/: database.py  feature_extraction.py  gui.py  search.py
testing/: README.md  download_test_images.py  pyproject.toml
(+33 files in other folders)
