[project]
name = "img-srch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.3",
    "pillow>=11.0.0",
    "pyperclip>=1.9.0",
    "pyqt5>=5.15.11",
    "scikit-learn>=1.5.2",
    "torch>=2.5.1",
    "tqdm>=4.67.0",
]
